k8s_deployment/feature_branches/ingress-master.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-image-ingress-master
  namespace: nginx-image
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes/ingress.class: nginx
spec:
 rules:
 - host: test-nginx.info
   http:
     paths:
     - path: /*
       backend:
         serviceName: nginxsvc1
         servicePort: 80
